
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================
Abs2
- Sélection des traitements sur la classe dans liste_traitements.php et liste_notifications.php

Absences et remplacements de professeurs
- Ajout d'un module de saisie d'absences de professeurs avec possibilité de proposer des remplacements aux professeurs qui n'ont pas cours sur un créneau libéré.

Edt:
- Dispositif d'import de fichiers ICAL/ICS pour remplir un Emploi du temps dans Gepi
  (dispositif alternatif, non lié à l'EDT classique de Gepi).
- Possibilité d'importer l'emploi du temps depuis l'export EXP_COURS.xml d'EDT.
- Possibilité de mettre à jour les inscriptions d'élèves dans des groupes Gepi d'après l'export EXP_ELEVES.xml d'EDT.

Discipline:
- Affichage d'un témoin d'incident/sanctions pour les élèves/parents.
- Possibilité d'afficher un témoin pour les incidents dans la page d'accueil en compte personnel de l'établissement.

Gestion:
- Accès au dossier d'export des absences de mod_abs2 en fin d'année (dans Sauvegarde et restauration).
- Possibilité de préciser la salle pour les événements classe.

Engagements:
- Ajout d'un module engagements (délégué de classe, membre du C.A.,...)

Années antérieures:
- Possibilité de générer un SQL des insertions lors de l'archivage.

Livret Scolaire Lycée:
- Ajout d'une ébauche de module.


Gepi-1.6.5 (14/06/2014)
===========================
Cahier de textes:
- Possibilité de définir en administrateur des URL absolues à corriger en URL relatives pour les documents joints aux cahiers de textes.

Cahier de notes:
- Possibilité de choisir la hauteur de ligne dans l'export PDF de toutes les moyennes de la classe.
- Relevés de notes: Dans le choix dates/périodes, affichage des dates de 1ère et dernière évaluation dans chaque période pour chacune des classes sélectionnées.

Bulletins:
- Possibilité de choisir la hauteur de ligne dans l'export PDF de toutes les moyennes de la classe.